# switcheroo-control

./: .gitignore  .gitlab-ci.yml  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  autogen.sh  configure  configure.ac
data/: 30-pci-intel-gpu.hwdb  Makefile.am  Makefile.in  switcheroo-control.service.in
data/scripts/: Makefile  generate-hwdb.c
debian/: changelog  control  control.in  gbp.conf  rules  watch
debian/patches/: 0001-main-Fix-declared-variant-type-for-GPUs-property.patch  gtk-doc-make.patch  series
docs/: Makefile.am  Makefile.in  docs-net.hadess.SwitcherooControl.xml
docs/html/: gdbus-net.hadess.SwitcherooControl.html  index.html  ix01.html  license.html  ref-dbus.html  switcheroo-control.devhelp2
src/: Makefile.am  Makefile.in  net.hadess.SwitcherooControl.xml  switcheroo-control-resources.c  switcheroo-control-resources.h  switcheroo-control.c
